--- a/Templates/index.html
+++ b/Templates/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wellcome to Flask Python</title>
+    <title>Flask Python</title>
 </head>
 <body>
-    
+    <h1>Wellcome to Flask Python</h1>
 </body>
 </html>
