--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,4 +1,20 @@
 <!-- '!'を押すと自動的にhtmlのテンプレートが下記のように出てくる -->
+<!-- Các thẻ thông dụng hay dùng trong html
+1. h1-h6 (heading)
+    Cỡ chữ giảm dần theo thứ tự h1 đến h6.
+    Trong 1 file html thường chỉ có 1 tiêu đề h1
+2. p (paragraph)
+3. img
+    <img src = """", alt = """"></img>
+    src(source): link đường dẫn đến file ảnh
+    alt: dùng để xử lý khi ảnh bị lỗi sẽ hiển thị ra nội dung gì
+4. a
+5. ul, li
+6. table
+7. input
+8. button
+9. div
+-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,6 +25,6 @@
     <title>Flask Python</title>
 </head>
 <body>
-    <h1>Wellcome to Flask Python</h1>
+    <h1 style="color: brown;">Wellcome {{content}} to Flask Python</h1>
 </body>
 </html>
